fixed overflow issue with forecast-info-container

--- a/teachnook/major/assets/style.css
+++ b/teachnook/major/assets/style.css
@@ -1,11 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Exo:wght@300&display=swap');
 
-*,
-::after,
-::before {
-	box-sizing: content-box;
-}
 
 body {
 	display: flex;
@@ -58,7 +53,7 @@ input.search-bar {
 	color: white;
 	font-family: inherit;
 	font-size: 105%;
-	width: calc(100% - 100px);
+	width: calc(100% - 50px);
 }
 
 button:hover {
@@ -220,7 +215,6 @@ h1 {
 	border: 1px solid gray;
 	border-radius: 20px;
 	background-color: azure;
-	/* box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); */
 }
 
 .forecast-info-container h2 {
